Mon Jul 11 14:55:57 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/be/be_util.cpp:

          Removed usage text for command line options that were
          removed a long time ago.

Fri Jul  8 14:57:31 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:

          Relocated the spot where a typedef node is marked as having
          its arg traits instantiation generated. There is a use case
          where the old location gave rise to infinite recursion and
          a stack overflow. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for uncovering the bug and submitting
          example IDL.

        * tests/IDL_Test/interface.cpp:

          Added the example IDL above to the test.

Fri Jul  8 06:39:27 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Base.h:
          Added some typedefs useful for template meta programming

Mon Jul  4 11:02:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Fixed Coverity error

        * orbsvcs/tests/Notify/performance-tests/Throughput/Throughput.cpp:
          Fixed mismatched delete as reported by Coverity

Wed Jun 29 12:44:21 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/TO-DO:
        * examples/Advanced/ch_21/client.cpp:
        * examples/Quoter/Quoter_i.cpp:
        * examples/Simple/bank/README:
          Cleanup

Wed Jun 29 11:27:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Simple/Client_i.h:
        * tests/OBV/Simple/OBV_impl.h:
        * tests/OBV/Simple/Server_i.h:
        * tests/OBV/Simple/Server_i.cpp:
        * tests/OBV/Simple/server.cpp:
          Cleanup

Wed Jun 29 11:13:02 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/TypeCode_Case_T.h:
        * tao/Basic_Argument_T.h: